Fixed spacing when HTML is minified

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -323,6 +323,7 @@ nav {
     display: inline-block;
     background-color: #3498DB;
     padding: 5px 7px;
+    margin-right: 0.5rem;
     border-radius: 5px;
     font-weight: 300;
     color: #FFF;
@@ -339,6 +340,10 @@ nav {
 .project-links li {
     display: inline-block;
     margin-right: 10px;
+}
+
+.project-links i {
+    margin-right: 0.2em;
 }
 
 /*--- ABOUT ME ---*/
